DT-716 Fixed issue with misalignment of CTA in IE and Safari.

--- a/src/client/components/molecules/dropdown-menu/dropdown-menu.scss
+++ b/src/client/components/molecules/dropdown-menu/dropdown-menu.scss
@@ -58,6 +58,7 @@
 }
 
 .businessGuideCTA {
+    left: 4%;
     bottom: 60px;
     position: absolute;
     width: 92%;
